# frieren_spire

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Project1.slnx  README.md
.github/workflows/: ci.yml
Project1/: Project1.vcxproj
Project1/assets/player/: README.md
Project1/assets/player/processed/: manifest.json
Project1/assets/spell_cards/: PROMPTS.md
Project1/assets/spells/: PROMPTS.md  README.md
Project1/assets/spells/processed/: manifest.json
Project1/src/: main.cpp
Project1/src/app/run/: AppFlowController.cpp  AppFlowController.hpp  RunController.cpp  RunController.hpp  TowerSession.cpp  TowerSession.hpp
Project1/src/common/binding/: Bindings.hpp
Project1/src/common/events/: UiEvent.hpp
Project1/src/common/geometry/: Geometry.hpp
Project1/src/common/input/: InputState.hpp
Project1/src/common/ui/: UiStates.hpp
Project1/src/game/ai/: EnemyController.cpp  EnemyController.hpp
Project1/src/game/combat/: Aabb.hpp  AttackState.cpp  AttackState.hpp  CombatContracts.hpp  CombatSession.cpp  CombatSession.hpp  CombatSessionBossRules.cpp  CombatSessionEnemySkills.cpp  CombatSessionSpellEffects.cpp  DamageResolver.cpp  DamageResolver.hpp  Health.cpp  Health.hpp
Project1/src/game/contracts/: PlayerIntent.hpp
Project1/src/game/economy/: MerchantSystem.cpp  MerchantSystem.hpp
Project1/src/game/events/: EventSystem.cpp  EventSystem.hpp
Project1/src/game/floors/: ArenaLayout.cpp  ArenaLayout.hpp  FloorController.cpp  FloorController.hpp  FloorScheduler.cpp  FloorScheduler.hpp
Project1/src/game/math/: Vec2.hpp
Project1/src/game/player/: PlayerController.cpp  PlayerController.hpp
Project1/src/game/progression/: ProgressionSystem.cpp  ProgressionSystem.hpp
Project1/src/game/relics/: RelicSystem.cpp  RelicSystem.hpp
Project1/src/game/rewards/: RewardSystem.cpp  RewardSystem.hpp
Project1/src/game/run/: DeterministicRng.cpp  DeterministicRng.hpp  RunTypes.hpp
Project1/src/game/spells/: SpellSystem.cpp  SpellSystem.hpp
Project1/src/platform/: SfmlInputMapper.cpp  SfmlInputMapper.hpp
Project1/src/presentation/: EnemyAnimator.cpp  EnemyAnimator.hpp  FlowViewState.cpp  FlowViewState.hpp  LootBookAnimator.cpp  LootBookAnimator.hpp  PlayerAnimator.cpp  PlayerAnimator.hpp  SfmlApplication.cpp  SfmlApplication.hpp  ShadeChargeAnimator.cpp  ShadeChargeAnimator.hpp  SpellCardArt.cpp  SpellCardArt.hpp  SpellEffectAnimator.cpp  SpellEffectAnimator.hpp
Project1/src/presentation/viewmodel/: ApplicationViewModel.cpp  ApplicationViewModel.hpp  CombatFeedbackViewModel.cpp  CombatFeedbackViewModel.hpp  LoadoutViewModel.cpp  LoadoutViewModel.hpp  SpellAcquisitionViewModel.cpp  SpellAcquisitionViewModel.hpp  UiViewModels.cpp  UiViewModels.hpp
Project1/src/presentation/views/: ArenaView.cpp  ArenaView.hpp  CombatView.cpp  CombatView.hpp  ScreenViews.cpp  ScreenViews.hpp  SpellAcquisitionView.cpp  SpellAcquisitionView.hpp  StaircaseView.cpp  StaircaseView.hpp  UiPrimitives.cpp  UiPrimitives.hpp
assets/: SOURCES.md
cmake/: VerifyViewDependencies.cmake
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  ENEMY_ANIMATION_ART_DIRECTION.md  GAME_DESIGN.md  HANDOFF_TO_B.md  MAGIC_RELIC_SYSTEM_DESIGN.md  MAGIC_VFX_DESIGN.md  MAP_DESIGN.md  MIDTERM_REPORT.md  SPELL_CARD_ART_DIRECTION.md  TEAM_WORK_SPLIT.md
docs/decisions/: 0001-sfml3-cmake.md
scripts/: Invoke-VsCMake.ps1  PrepareEnemyAnimations.py  PrepareEnvironmentAssets.py  PrepareSpellCardSamples.py  PrepareStaircaseAssets.py  Process-PlayerSprites.py  Process-SpellVfx.py
tests/: arena_layout_tests.cpp  binding_contract_tests.cpp  combat_session_tests.cpp  player_controller_tests.cpp  run_flow_tests.cpp  sfml_input_mapper_tests.cpp  tower_session_tests.cpp  ui_viewmodel_tests.cpp  ui_visual_regression_tests.cpp  ui_window_smoke_test.cpp
